tests/ui/async-await/generator-wf-check.output_wf.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/generator-wf-check.rs:25:8
   |
LL |       wf(async {
   |  ________^
LL | |
LL | |         None::<Static<T>>
LL | |     });
   | |_____^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn test_output_wf<T: 'static>() {
   |                    +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
